b4.4.2 - Fixes
- Corrected "es" localisation typos;
- Fixed folder dropdown icon getting smaller if bookmark name is too big;
- Fixed bookmark menu texts not having any margin at the end, causing texts to be too close to the end of the menu;
- Fixed panel popups not being clickable if "transitioning" attribute is enabled;
- Fixed being able to have IE10 beta aboutDialogs in IE9 Pre-Release.

--- a/Profile Folder/chrome/partials/chrome/_base.scss
+++ b/Profile Folder/chrome/partials/chrome/_base.scss
@@ -744,6 +744,7 @@ toolbarpaletteitem[id*="wrapper-customizableui-special-spring"] {
             .toolbarbutton-text {
                 &::after {
                     content: '';
+                    min-width: 17px;
                     width: 17px;
                     height: 16px;
                     background-color: black;
